--- a/README
+++ b/README
@@ -22,7 +22,9 @@ potential attacks on log files.
 
     Currently, arclog supports Apache access log, Syslog, NTP, Apache 1 SSL
 engine log and my own bracketed, modified ISO date/time log file formats, and
-gzip and bzip2 compression methods.
+gzip and bzip2 compression methods.  Several software projects log (or can
+log) in a format compatible with the Apache access log, like CUPS, ProFTPD,
+Pure-FTPd... etc., and arclog can archive their Apache-like log files, too.
 
 
 * Documentation
@@ -60,6 +62,6 @@ refer to the COPYING file for the copyright and the license of this program.
 
 
 imacat ^_*'
-2007-11-26
+2007-12-03
 imacat@mail.imacat.idv.tw
 http://www.imacat.idv.tw/
